--- a/MySQL/Monitor/TODO
+++ b/MySQL/Monitor/TODO
@@ -38,3 +38,5 @@
     另新增的永远存储密码字段需加密存储;
     IP_TO_INT可参考:http://www.aboutmyip.com/AboutMyXApp/IP2Integer.jsp
 10、建议在实例运行情况饼图中显示监控的主从库比例和各实例运行时常
+11、MongoDB中建议使用唯一索引：
+    db.slow_sql.ensuereIndex({"SQL_TEXT": 1, "STARTTIME": 1}, {unique: true})
